Managed to get anyfx to be nicely formatted and located within a subfolder when running fips.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,23 @@
-if (NOT FIPS_IMPORT)
-    cmake_minimum_required(VERSION 2.8)
-    get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
-    include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
-    fips_setup()
-    fips_project(fips-anyfx)
-endif()
+cmake_minimum_required(VERSION 2.8)
+get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
+include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
+
+IF(WIN32)
+	SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/win32)
+ELSEIF(UNIX)
+	SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/linux)
+ENDIF()
+
+MACRO(SET_DEFAULT_OUTPUT TargetName)
+	SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DEFAULT_DIR})
+	SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DEFAULT_DIR})
+	SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEFAULT_DIR})
+	SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DEFAULT_DIR})
+	SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DEFAULT_DIR})
+ENDMACRO(SET_DEFAULT_OUTPUT)
+		
+fips_setup()
+fips_project(fips-anyfx)
 
     fips_begin_lib(anyfx)
 
@@ -52,71 +65,41 @@ endif()
 			ADD_DEFINITIONS(-D__GNUCXX__)
 		ENDIF()
 		
-		IF(WIN32)
-			SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/win32)
-		ELSEIF(UNIX)
-			SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/linux)
-		ENDIF()
-
-		MACRO(SET_DEFAULT_OUTPUT TargetName)
-			SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DEFAULT_DIR})
-			SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DEFAULT_DIR})
-			SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEFAULT_DIR})
-			SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DEFAULT_DIR})
-			SET_TARGET_PROPERTIES(${TargetName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DEFAULT_DIR})
-		ENDMACRO(SET_DEFAULT_OUTPUT)
-
 		OPTION(ANYFX_BUILD_DEMO "Build AnyFX Demo" OFF)
 		OPTION(ANYFX_BUILD_COMPILER_LIBRARY "Build AnyFX Compiler as a library" ON)
 		OPTION(ANYFX_TRANSPOSE_MATRICES "Builds AnyFX with automatic matrix transposing for variables")
 		
-		fips_dir(anyfx/api)
-			fips_src(${ANYFX_SOURCE_DIR}/api NO_RECURSE)
-			#fips_files_ex(../ *.h *.cc NO_RECURSE)
-		fips_dir(api/highlevel)
-			fips_files_ex(./ *.h *.cc)
-			fips_dir(api/highlevel/internal)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(api/highlevel/loaders)
-				fips_files_ex(./ *.h *.cc)
-		fips_dir(api/lowlevel)
-			fips_files_ex(./ *.h *.cc)
-			fips_dir(api/lowlevel/base)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(api/lowlevel/dx12)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(api/lowlevel/gl4)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(api/lowlevel/loaders)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(api/lowlevel/mtl)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(api/lowlevel/vk)
-				fips_files_ex(./ *.h *.cc)
-		fips_dir(compiler/code)
-			fips_files_ex(./ *.h *.cc)
-			fips_dir(compiler/code/expressions)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(compiler/code/generators)
-				fips_files_ex(./ *.h *.cc)
-			fips_dir(compiler/code/parser)
-				fips_files_ex(./ *.h *.cc)
-		fips_dir(util/code)
-			fips_files_ex(./ *.h *.cc)
-			
+		fips_src(anyfx/api/ NO_RECURSE)
+		#fips_src(anyfx/api/highlevel/ NO_RECURSE)
+		#fips_src(anyfx/api/highlevel/internal/ NO_RECURSE)
+		#fips_src(anyfx/api/highlevel/loaders/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/base/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/dx12/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/gl4/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/loaders/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/mtl/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/vk/ NO_RECURSE)
+		
+		fips_src(anyfx/compiler/code/ NO_RECURSE)
+		fips_src(anyfx/compiler/code/expressions/ NO_RECURSE)
+		fips_src(anyfx/compiler/code/generators/ NO_RECURSE)
+		fips_src(anyfx/compiler/code/parser/ NO_RECURSE)
+		
+		fips_src(anyfx/util/code/ NO_RECURSE)			
 		
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/api)
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler)
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/util)
-		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/eastl)
-		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/glslang)
-		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/mcpp)
-		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/antlr)
-		
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/eastl)
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/glslang)
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/mcpp)
 		#ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/antlr)
+		
+		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/eastl)
+		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/glslang)
+		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/mcpp)
+		ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/antlr)
 	#	fips_dir(${ANYFX_SOURCE_DIR}/exts/eastl)
 	#	fips_files(*.*)
 	#	fips_dir(${ANYFX_SOURCE_DIR}/exts/glslang)
@@ -127,7 +110,7 @@ endif()
 		ENDIF()
 		IF (NOT ANYFX_GLEW_EXTERNAL)
 			ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/exts/glew)
-			SET_TARGET_PROPERTIES(glew PROPERTIES FOLDER ${ANYFX_FOLDER}/exts)
+			SET_TARGET_PROPERTIES(glew PROPERTIES FOLDER Extlibs)
 		ENDIF()
 
 		IF (MSVC)
@@ -137,24 +120,23 @@ endif()
 		ENDIF()
 
 		# set target subdirs
-		SET_TARGET_PROPERTIES(mcpp PROPERTIES FOLDER ${ANYFX_FOLDER})
-		SET_TARGET_PROPERTIES(antlr PROPERTIES FOLDER ${ANYFX_FOLDER})
-		SET_TARGET_PROPERTIES(EASTL PROPERTIES FOLDER ${ANYFX_FOLDER})
+		SET_TARGET_PROPERTIES(mcpp PROPERTIES FOLDER Extlibs)
+		SET_TARGET_PROPERTIES(antlr PROPERTIES FOLDER Extlibs)
+		SET_TARGET_PROPERTIES(EASTL PROPERTIES FOLDER Extlibs)
 
 		#SET_TARGET_PROPERTIES(highlevel-api PROPERTIES FOLDER ${ANYFX_FOLDER})
 		#SET_TARGET_PROPERTIES(lowlevel-api PROPERTIES FOLDER ${ANYFX_FOLDER})
 
 		# set khronos compiler folders
-		SET_TARGET_PROPERTIES(glslang PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(glslangValidator PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(glslang-default-resource-limits PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(OGLCompiler PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(OSDependent PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(HLSL PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(SPIRV PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
-		SET_TARGET_PROPERTIES(spirv-remap PROPERTIES FOLDER ${ANYFX_FOLDER}/khronos)
+		SET_TARGET_PROPERTIES(glslang PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(glslangValidator PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(glslang-default-resource-limits PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(OGLCompiler PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(OSDependent PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(HLSL PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(SPIRV PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(spirv-remap PROPERTIES FOLDER Extlibs/khronos)
 		
-
 		IF(ANYFX_TRANSPOSE_MATRICES)
 			ADD_DEFINITIONS(-D__ANYFX_TRANSPOSE_MATRIX__)
 		ENDIF()
@@ -165,7 +147,12 @@ endif()
 		ENDIF()
 		
 	fips_end_lib()
+	
+	FILE(GLOB SRC anyfx/compiler/code/parser/AnyFXParser.c anyfx/compiler/code/parser/AnyFXLexer.c)
+	SET_SOURCE_FILES_PROPERTIES( ${SRC} PROPERTIES LANGUAGE "CXX" )
+	
+	FIND_PACKAGE(Vulkan)
+	TARGET_INCLUDE_DIRECTORIES(anyfx PUBLIC ${Vulkan_INCLUDE_DIR})
 
-if (NOT FIPS_IMPORT)
-    fips_finish()
-endif()
+fips_finish()
+
