--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,14 @@ fips_project(fips-anyfx)
 		SET_TARGET_PROPERTIES(HLSL PROPERTIES FOLDER Extlibs/khronos)
 		SET_TARGET_PROPERTIES(SPIRV PROPERTIES FOLDER Extlibs/khronos)
 		SET_TARGET_PROPERTIES(spirv-remap PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(SPVRemapper PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(Continuous PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(Experimental PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(Nightly PROPERTIES FOLDER Extlibs/khronos)
+		SET_TARGET_PROPERTIES(NightlyMemoryCheck PROPERTIES FOLDER Extlibs/khronos)
+
+		ADD_LIBRARY(libglslang INTERFACE)
+		TARGET_LINK_LIBRARIES(libglslang INTERFACE glslang glslang-default-resource-limits OGLCompiler OSDependent HLSL SPIRV)
 		
 		IF(ANYFX_TRANSPOSE_MATRICES)
 			ADD_DEFINITIONS(-D__ANYFX_TRANSPOSE_MATRIX__)
