--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ endif()
 
 	IF (MSVC)
 			IF(CMAKE_CL_64)
-				SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " /wd4267")
+				SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4267")
 			ENDIF()
 		ENDIF()
 
