--- a/fips.yml
+++ b/fips.yml
@@ -7,6 +7,8 @@ imports:
         git: https://github.com/gscept/fips-glslang.git
      fips-glew:
         git: https://github.com/gscept/fips-glew.git
+     fips-vulkanheaders:
+        git: https://github.com/gscept/fips-vulkanheaders
         
 exports:
     header-dirs: 
