--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,6 @@ endif()
 		SET_TARGET_PROPERTIES(mcpp PROPERTIES FOLDER Extlibs)
 		SET_TARGET_PROPERTIES(antlr4 PROPERTIES FOLDER Extlibs)
 
-
 #		ADD_LIBRARY(libglslang INTERFACE)
 #		TARGET_LINK_LIBRARIES(libglslang INTERFACE glslang)
 
@@ -134,6 +133,16 @@ endif()
 		ENDIF()
 
 	fips_end_lib()
+
+	if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+			set_target_properties(anyfx PROPERTIES UNITY_BUILD OFF)
+			set_target_properties(anyfx PROPERTIES UNITY_BUILD_BATCH_SIZE 20)
+			set_property(SOURCE anyfx/api/lowlevel/vk/vksampler.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+			set_property(SOURCE anyfx/util/code/binreader.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+			set_property(SOURCE anyfx/compiler/code/structure.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+			set_property(SOURCE anyfx/compiler/code/effect.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+	endif()
+
 
 	#FILE(GLOB SRC anyfx/compiler/code/parser/AnyFXParser.c anyfx/compiler/code/parser/AnyFXLexer.c)
 	FILE(GLOB SRC anyfx/compiler/code/parser4/AnyFXParser.cpp anyfx/compiler/code/parser4/AnyFXLexer.cpp anyfx/compiler/code/parser4/AnyFXLexer.cpp anyfx/compiler/code/parser4/AnyFXBaseListener.cpp anyfx/compiler/code/parser4/AnyFXListener.cpp)
