--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,7 @@ endif()
 
 	fips_end_lib()
 
-	if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
+	if(NOT BUILD_COMPILER AND ${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
 			set_target_properties(anyfx PROPERTIES UNITY_BUILD ON)
 			set_target_properties(anyfx PROPERTIES UNITY_BUILD_BATCH_SIZE 20)
 			set_property(SOURCE anyfx/api/lowlevel/vk/vksampler.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
