--- a/anyfx/compiler/CMakeLists.txt
+++ b/anyfx/compiler/CMakeLists.txt
@@ -35,14 +35,12 @@ SET_SOURCE_FILES_PROPERTIES( ${SRC} PROPERTIES LANGUAGE "CXX" )
 LIST(APPEND CODE ${SRC} ${HEAD})
 	
 IF (ANYFX_BUILD_COMPILER_LIBRARY)
-
-	# remove main from cmake
-	FILE(GLOB MAIN "code/main.cc")
-	LIST(REMOVE_ITEM CODE ${MAIN})
-	
 	ADD_DEFINITIONS(-D__ANYFX_COMPILER_LIBRARY__)
 	ADD_LIBRARY(compiler STATIC ${CODE})
 ELSE()
+    FILE(GLOB SRC "code/application/*.cc")
+    SOURCE_GROUP("compiler" FILES ${SRC})
+    LIST(APPEND CODE ${SRC})
 	ADD_EXECUTABLE(compiler ${CODE})	
 ENDIF()
 
