fixed linux build of anyfxcompiler

--- a/fips-files/configs/anyfxcompiler-linux.yml
+++ b/fips-files/configs/anyfxcompiler-linux.yml
@@ -1,7 +1,9 @@
 ---
 platform: linux
-generator: Ninja
-build_tool: ninja
+generator: Unix Makefiles
+build_tool: make
 build_type: Release
 defines:
   BUILD_COMPILER: ON
+  FIPS_RTTI: ON
+  FIPS_EXCEPTIONS: ON
