Split API and compiler into separate build targets to speed up builds when integrating.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,10 @@ endif()
 
 	get_filename_component(ANYFX_SOURCE_DIR "anyfx" ABSOLUTE)
 
-	ADD_DEFINITIONS(-DANTLR4CPP_STATIC)
 
+    fips_begin_lib(anyfxc)
 
-
-    fips_begin_lib(anyfx)
-
+	    ADD_DEFINITIONS(-DANTLR4CPP_STATIC)
 
 		#SET(ANYFX_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/anyfx)
 
@@ -38,17 +36,6 @@ endif()
 
 		SET(ANYFX_HAS_METAL OFF)
 		SET(ANYFX_HAS_DX12 OFF)
-		IF (WIN32)
-			SET(OPENGL_LIBS glu32.lib opengl32.lib)
-		ELSEIF(APPLE)
-			LINK_DIRECTORIES(/System/Library/Frameworks /usr/X11R6/lib /opt/local/lib)
-			INCLUDE_DIRECTORIES(/System/Library/Frameworks /usr/X11R6/include /opt/local/include)
-			FIND_PACKAGE(OpenGL REQUIRED)
-			INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
-			SET(OPENGL_LIBS ${OPENGL_LIBRARIES} X11)
-		ELSEIF(UNIX)
-			SET(OPENGL_LIBS GL X11)
-		ENDIF()
 
 		# set compiler definitions
 		IF(WIN32)
@@ -67,40 +54,20 @@ endif()
 
 		OPTION(ANYFX_BUILD_DEMO "Build AnyFX Demo" OFF)
 		OPTION(ANYFX_BUILD_COMPILER_LIBRARY "Build AnyFX Compiler as a library" ON)
-		OPTION(ANYFX_TRANSPOSE_MATRICES "Builds AnyFX with automatic matrix transposing for variables")
-
-
 
         # explicitly only enable implemented generators
-		fips_src(anyfx/api/ NO_RECURSE)
-		#fips_src(anyfx/api/highlevel/ NO_RECURSE)
-		#fips_src(anyfx/api/highlevel/internal/ NO_RECURSE)
-		#fips_src(anyfx/api/highlevel/loaders/ NO_RECURSE)
 
 		fips_include_directories(anyfx)
-		fips_include_directories(anyfx/api)
-		fips_include_directories(anyfx/api/lowlevel)
-		fips_include_directories(anyfx/api/highlevel)
 		fips_include_directories(anyfx/compiler/code)
 		fips_include_directories(anyfx/compiler/code/v3)
 		fips_include_directories(anyfx/compiler/antlr4/src)
 		fips_include_directories(anyfx/compiler/mcpp)
 		fips_include_directories(anyfx/util/code)
 
-
-		fips_src(anyfx/api/lowlevel/ NO_RECURSE)
-		fips_src(anyfx/api/lowlevel/base/ NO_RECURSE)
-		fips_src(anyfx/api/lowlevel/dx12/ NO_RECURSE)
-		fips_src(anyfx/api/lowlevel/gl4/ NO_RECURSE)
-		fips_src(anyfx/api/lowlevel/loaders/ NO_RECURSE)
-		fips_src(anyfx/api/lowlevel/mtl/ NO_RECURSE)
-		fips_src(anyfx/api/lowlevel/vk/ NO_RECURSE)
-
 		fips_src(anyfx/compiler/code/ NO_RECURSE)
-		fips_src(anyfx/compiler/code/expressions/ NO_RECURSE)
 		fips_src(anyfx/compiler/code/parser4/ NO_RECURSE)
-		fips_src(anyfx/util/code/ NO_RECURSE)
 		fips_src(anyfx/compiler/code/v3/ GROUP_FOLDERS)
+		fips_src(anyfx/util/code/ NO_RECURSE)
 
 		IF (MSVC)
 			IF(CMAKE_CL_64)
@@ -108,39 +75,52 @@ endif()
 			ENDIF()
 		ENDIF()
 
-
-
-		IF(ANYFX_TRANSPOSE_MATRICES)
-			ADD_DEFINITIONS(-D__ANYFX_TRANSPOSE_MATRIX__)
-		ENDIF()
-
 		IF(ANYFX_BUILD_DEMO)
 			ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/demo)
 			SET_TARGET_PROPERTIES(demo PROPERTIES FOLDER ${ANYFX_FOLDER})
 		ENDIF()
 
-	fips_deps(antlr4 mcpp glslang)
+	    fips_deps(antlr4 mcpp glslang)
+
+    	FILE(GLOB SRC anyfx/compiler/code/parser4/AnyFXParser.cpp anyfx/compiler/code/parser4/AnyFXLexer.cpp anyfx/compiler/code/parser4/AnyFXLexer.cpp anyfx/compiler/code/parser4/AnyFXBaseListener.cpp anyfx/compiler/code/parser4/AnyFXListener.cpp)
+	    SET_SOURCE_FILES_PROPERTIES( ${SRC} PROPERTIES LANGUAGE "CXX" )
+
+	    ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/mcpp)
+	    ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/antlr4)
+	    # set target subdirs
+	    SET_TARGET_PROPERTIES(mcpp PROPERTIES FOLDER Extlibs)
+	    SET_TARGET_PROPERTIES(antlr4 PROPERTIES FOLDER Extlibs)
 
 	fips_end_lib()
 
+    fips_begin_lib(anyfxapi)
+        fips_include_directories(anyfx)
+    	fips_include_directories(anyfx/api)
+		fips_include_directories(anyfx/api/lowlevel)
+		fips_include_directories(anyfx/api/highlevel)
+		fips_include_directories(anyfx/util/code)
+
+		fips_src(anyfx/api/ NO_RECURSE)
+        fips_src(anyfx/api/lowlevel/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/base/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/dx12/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/gl4/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/loaders/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/mtl/ NO_RECURSE)
+		fips_src(anyfx/api/lowlevel/vk/ NO_RECURSE)
+    fips_end_lib()
+
 
 	if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
-			set_target_properties(anyfx PROPERTIES UNITY_BUILD OFF)
-			set_target_properties(anyfx PROPERTIES UNITY_BUILD_BATCH_SIZE 20)
+			set_target_properties(anyfxc PROPERTIES UNITY_BUILD OFF)
+			set_target_properties(anyfxc PROPERTIES UNITY_BUILD_BATCH_SIZE 20)
 			set_property(SOURCE anyfx/api/lowlevel/vk/vksampler.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 			set_property(SOURCE anyfx/util/code/binreader.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 			set_property(SOURCE anyfx/compiler/code/structure.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 			set_property(SOURCE anyfx/compiler/code/effect.cc PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 	endif()
 
-	FILE(GLOB SRC anyfx/compiler/code/parser4/AnyFXParser.cpp anyfx/compiler/code/parser4/AnyFXLexer.cpp anyfx/compiler/code/parser4/AnyFXLexer.cpp anyfx/compiler/code/parser4/AnyFXBaseListener.cpp anyfx/compiler/code/parser4/AnyFXListener.cpp)
-	SET_SOURCE_FILES_PROPERTIES( ${SRC} PROPERTIES LANGUAGE "CXX" )
 
-	ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/mcpp)
-	ADD_SUBDIRECTORY(${ANYFX_SOURCE_DIR}/compiler/antlr4)
-	# set target subdirs
-	SET_TARGET_PROPERTIES(mcpp PROPERTIES FOLDER Extlibs)
-	SET_TARGET_PROPERTIES(antlr4 PROPERTIES FOLDER Extlibs)
     IF(BUILD_COMPILER)
         fips_add_subdirectory(anyfxcompiler)
     ENDIF()
