--- a/anyfxcompiler/CMakeLists.txt
+++ b/anyfxcompiler/CMakeLists.txt
@@ -7,9 +7,9 @@ set(CMAKE_CXX_STANDARD 17)
 fips_begin_app(anyfxcompiler cmdline)
     fips_vs_warning_level(3)
     fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-    fips_deps(anyfx antlr4 mcpp glslang)
+    fips_deps(anyfxc antlr4 mcpp glslang)
     if(FIPS_LINUX)
-	    fips_deps(anyfx stdc++fs)
+	    fips_deps(anyfxc stdc++fs)
     endif()
     fips_files(
          shadercompilerapp.cc
