Added more validation and generator support
Can now generate GLSL (to some extent)
Can now generate a little bit of SPIRV
But going to diverge a bit from the SPIRV path, instead translate the program to LLVM, and write a SPIRV backend for LLVM instead.

--- a/fips.yml
+++ b/fips.yml
@@ -3,12 +3,15 @@
 #
 ---
 imports:
-     fips-glslang:
+      fips-llvm-spirv:
+        git: https://github.com/Duttenheim/fips-llvm-spirv.git
+      fips-glslang:
         git: https://github.com/gscept/fips-glslang.git
-     fips-glew:
+      fips-glew:
         git: https://github.com/gscept/fips-glew.git
-     fips-vulkanheaders:
-        git: https://github.com/gscept/fips-vulkanheaders
+      fips-vulkanheaders:
+        git: https://github.com/gscept/fips-vulkanheaders      
+
         
 exports:
     header-dirs: 
