--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ if (NOT FIPS_IMPORT)
 get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
 include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
 	SET(BUILD_ANYFXCOMPILER 1)
+	fips_setup()
 endif()
 
 IF(WIN32)
@@ -83,7 +84,7 @@ ENDMACRO(SET_DEFAULT_OUTPUT)
 		target_include_directories(anyfx PRIVATE anyfx)
 		target_include_directories(anyfx PRIVATE anyfx/api/lowlevel)
 		target_include_directories(anyfx PRIVATE anyfx/api/highlevel)
-		target_include_directories(anyfx PRIVATE anyfx/compiler/code)
+		target_include_directories(anyfx PUBLIC anyfx/compiler/code)
 		target_include_directories(anyfx PRIVATE anyfx/compiler/antlr4/src)
 		target_include_directories(anyfx PRIVATE anyfx/compiler/mcpp)
 		target_include_directories(anyfx PRIVATE anyfx/util/code)
@@ -151,7 +152,7 @@ else()
 
 endif()
     IF(BUILD_COMPILER)
-        fips_add_subdirectory(anyfxcompiler)
+        add_subdirectory(anyfxcompiler)
     ENDIF()
 if(NOT FIPS_IMPORT)
     fips_finish()
