Add support for darwin/apple platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED on)
+
 if (NOT FIPS_IMPORT)
 	project(fips-anyfx)
 get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
@@ -11,6 +15,8 @@ IF(WIN32)
 	SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/win32)
 ELSEIF(UNIX)
 	SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/linux)
+ELSEIF(APPLE)
+	SET(OUTPUT_DEFAULT_DIR ${CMAKE_HOME_DIRECTORY}/bin/macos)
 ENDIF()
 
 MACRO(SET_DEFAULT_OUTPUT TargetName)
