--- a/anyfx/compiler/mcpp/CMakeLists.txt
+++ b/anyfx/compiler/mcpp/CMakeLists.txt
@@ -12,9 +12,11 @@ SOURCE_GROUP("mcpp" FILES ${SRC} ${HEAD1} ${HEAD2})
 LIST(APPEND CODE ${SRC} ${HEAD1} ${HEAD2})
 
 IF(MSVC)
-	ADD_DEFINITIONS("/W0")
-ELSEIF(UNIX OR APPLE)
-	ADD_DEFINITIONS("-w -DUNIX")
+	ADD_DEFINITIONS("/W0 -DSYSTEM=SYS_WIN32")
+ELSEIF(UNIX)
+	ADD_DEFINITIONS("-w -DSYSTEM=SYS_LINUX")
+ELSEIF(APPLE)
+	ADD_DEFINITIONS("-w -DSYSTEM=SYS_MAC")
 ENDIF()
 ADD_DEFINITIONS(-DMCPP_LIB)
 
