Use independent compiler on all platforms except apple with clang

--- a/anyfx/compiler/mcpp/CMakeLists.txt
+++ b/anyfx/compiler/mcpp/CMakeLists.txt
@@ -9,20 +9,18 @@ FILE(GLOB HEAD2 "*.H")
 SOURCE_GROUP("mcpp" FILES ${SRC} ${HEAD1} ${HEAD2})
 LIST(APPEND CODE ${SRC} ${HEAD1} ${HEAD2})
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND APPLE)
   ADD_DEFINITIONS(-DCOMPILER=CLANG)
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  ADD_DEFINITIONS(-DCOMPILER=GNUC)
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-  ADD_DEFINITIONS(-DCOMPILER=MSC)
+else()
+  ADD_DEFINITIONS(-DCOMPILER=INDEPENDENT)
 endif()
 
 IF(MSVC)
-	ADD_DEFINITIONS(/W0 -DSYSTEM=SYS_WIN)
+	ADD_DEFINITIONS("/W0 -DSYSTEM=SYS_WIN")
 ELSEIF(UNIX)
-	ADD_DEFINITIONS(-w -DSYSTEM=SYS_UNIX)
+	ADD_DEFINITIONS("-w -DSYSTEM=SYS_UNIX")
 ELSEIF(APPLE)
-	ADD_DEFINITIONS(-w -DSYSTEM=SYS_MAC)
+	ADD_DEFINITIONS("-w -DSYSTEM=SYS_MAC")
 ENDIF()
 ADD_DEFINITIONS(-DMCPP_LIB)
 
